Migrate away from using discord libraries directly